--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-git2 = "0.19.0"
-octocrab = "0.42.0"
+ureq = { version = "2.10.1", features = ["json"] }
