--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.215", features = ["derive"] }
 ureq = { version = "2.10.1", features = ["json"] }
